--- a/beta/chapter2.tex
+++ b/beta/chapter2.tex
@@ -45,7 +45,7 @@ Let's take a look at an example\footnote{Full example can be viewed at \url{http
 \newline
 The two lines at the top, \textbf{xmlns:rdf} and \textbf{xmlns:cd} define from which namespace elements with the rdf and cd prefix are from. The \textbf{rdf:Description} element contains the description of the resource identified by the \textbf{rdf:about} attribute. Finally the elements \textbf{cd:artist, cd:country, cd:company} etc. are properties of the resource.
 
-\section{RDFa}
+\subsection{RDFa}
 RDFa is a syntax for embedding an RDF graph in an XHTML document by using XHTML attributes for expressing RDF properties. It was proposed by Mark Birbeck\footnote{\url{http://markbirbeck.com/}} in the form of a W3C note entitled XHTML and RDF\cite{rdfaBib}.\\\\
 RDFa is based on attributes that are used to carry metadata in an XML/HTML/XHTML language. There are some attributes that have been reused, for example “href” and “src” that comes from the HTML syntax. Then there is also a set of new attributes that are specified for RDFa, the attributes are:\cite{rdfaBib2}
 \begin{itemize}
