--- a/beta/title.tex
+++ b/beta/title.tex
@@ -1,6 +1,6 @@
 \title{Semantic parsing of Swedish laws}
 
-\subtitle{Using RDF to parse and format legal documents in accordance with applicable standards to contribute to a more semantic web}
+\subtitle{Using RDF to format legal documents in accordance with applicable standards to contribute to a more semantic web}
 \foreigntitle{Utnyttja RDF för att tolka och formatera juridiska dokument i enlighet med 
 				tillämpliga standarder för att bidra till en mer semantisk webb}
 \author{Mikael Falgard}
